--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,10 +18,12 @@
         tools:targetApi="31">
         <service
             android:name=".domain.services.StopWatchService"
+            android:foregroundServiceType="shortService"
             android:enabled="true"
             android:exported="false" />
         <service
             android:name=".domain.services.StrictTaskService"
+            android:foregroundServiceType="shortService"
             android:enabled="true"
             android:exported="false" />
         <activity
