Finally all bugs are fixed and the app is working properly!!

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,6 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.Niyam">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -37,7 +36,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".presentation.screens.view.preview.TaskPreview" android:label="@string/app_name">
+        <activity android:name=".presentation.screens.view.preview.TaskPreview" >
+        </activity>
+        <activity android:name=".presentation.screens.view.preview.StrictTaskPreview">
 
         </activity>
     </application>
